# libnei

./: .clang-format  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  compile_flags.txt  log_bench_compare_linux_latest.md  log_bench_compare_windows_latest.md  log_bench_linux_latest.md  log_bench_windows_latest.md  neixx_task_module.md  quick_bench.ps1  threadpool_bench_latest.md
bench/: CMakeLists.txt  flake_id_bench.c  log_bench.cpp  log_bench_compare.cpp  rebuild_and_bench_log.ps1  rebuild_and_bench_log.sh  rebuild_and_bench_log_compare.ps1  rebuild_and_bench_log_compare.sh  rebuild_and_bench_threadpool.ps1  rebuild_and_bench_threadpool.sh  string_append_bench.cpp  task_thread_bench.cpp  task_threadpool_bench.cpp
bench/results/linux_wsl_release_10run_20260426_005713/: benchmark_report_linux_wsl_release_10run_normalized_clean.md
bench/results/root_reports_2026-04-25/: log_bench_compare_latest.md  log_bench_compare_report_linux_current.md  log_bench_latest.md  log_bench_linux_latest.md  log_bench_lowrisk_ab_base_linux.md  log_bench_lowrisk_eval_linux.md  log_bench_lowrisk_eval_linux_r2.md  log_bench_report_linux_current.md  log_bench_windows_latest.md
bench/results/windows_release_10run_20260426_003513/: benchmark_report_windows_release_10run_normalized.md
cmake/: neiConfig.cmake.in
demo/: CMakeLists.txt  command_line_demo.cpp  flake_id_demo.c  log_demo.c  log_immediate_crash_demo.c  process_async_stdout_demo.cpp  string_util_demo.cpp  task_location_delay_demo.cpp  task_shutdown_demo.cpp
modules/nei/: CMakeLists.txt
modules/nei/core/: CMakeLists.txt
modules/nei/core/include/nei/core/: endian.h
modules/nei/core/src/: endian.c  endian_internal.h  endian_posix.c  endian_win.c
modules/nei/debug/include/nei/debug/: check.h
modules/nei/log/: CMakeLists.txt
modules/nei/log/include/nei/log/: log.h
modules/nei/log/src/: log.c  log_api.c  log_config.c  log_format.c  log_internal.h  log_runtime.c  log_serialize.c  log_sink.c  log_thread_id.c
modules/nei/macros/include/nei/macros/: check.h  compiler_specific.h  namespace.h  nei_export.h  typedefs.h
modules/nei/utils/: CMakeLists.txt
modules/nei/utils/include/nei/utils/: base64.h  flake_id.h  md5.h  sha1.h  strings.h  uuid.h
modules/nei/utils/src/: base64.c  flake_id.c  md5.c  sha1.c  strings.cpp  uuid.c
modules/nei/xdr/include/nei/xdr/: xdr.h
modules/neixx/: CMakeLists.txt  thread_pool_all_src.md
modules/neixx/command_line/: CMakeLists.txt
modules/neixx/command_line/include/neixx/command_line/: command_line.h
modules/neixx/command_line/src/: command_line.cpp
modules/neixx/functional/: CMakeLists.txt
modules/neixx/functional/include/neixx/functional/: cancelable_callback.h
modules/neixx/functional/src/: callback.cpp  cancelable_callback.cpp
modules/neixx/io/: CMakeLists.txt
modules/neixx/io/include/neixx/io/: async_handle.h  async_stream.h  file_handle.h  io_buffer.h  io_context.h  io_operation.h  platform_handle.h
modules/neixx/io/src/: async_handle.cpp  async_handle_internal.h  async_handle_posix.cpp  async_handle_win.cpp  file_handle.cpp  file_handle_platform.h  file_handle_posix.cpp  file_handle_win.cpp  io_buffer.cpp  io_buffer_platform.h  io_buffer_posix.cpp  io_buffer_win.cpp  io_context.cpp  io_context_impl.h  io_context_internal.h  io_context_posix.cpp  io_context_win.cpp  io_operation.cpp
modules/neixx/memory/: CMakeLists.txt
modules/neixx/process/: CMakeLists.txt
modules/neixx/process/src/: launch.cpp  launch_internal.h  launch_posix.cpp  launch_win.cpp  process.cpp  process_internal.h  process_posix.cpp  process_win.cpp
modules/neixx/strings/: CMakeLists.txt  main.cpp
modules/neixx/strings/src/: chinese_search_key.cpp  cjk_width.cpp  split_string.cpp  string_number_conversions.cpp  string_util.cpp  text_normalization.cpp  utf_string_conversions.cpp  utf_string_conversions_fallback.h  utf_string_conversions_posix.cpp  utf_string_conversions_win.cpp
modules/neixx/task/: CMakeLists.txt  TASK_MODULE_TECHNICAL.md
modules/neixx/task/src/: callback.cpp  callback_base.cpp  internal_flag.cpp  scoped_blocking_call.cpp  sequenced_task_runner.cpp  single_thread_task_runner.cpp  single_thread_task_runner.h  task_environment.cpp  task_runner.cpp  task_tracer.cpp  thread.cpp  thread_pool.cpp  time_source.cpp
modules/neixx/task/src/functional/: callback.cpp  callback_base.cpp
modules/neixx/threading/: CMakeLists.txt
modules/neixx/threading/src/: platform_thread_posix.cpp  platform_thread_win.cpp  sequence_local_storage_slot.cpp  thread.cpp  thread_restrictions.cpp  waitable_event.cpp
modules/task/: CMakeLists.txt
modules/task/include/nei/task/: callback.h  callback_base.h  once_callback.h  scoped_blocking_call.h  sequenced_task_runner.h  task_environment.h  task_runner.h  task_tracer.h  task_traits.h  thread.h  thread_pool.h
modules/task/src/: callback.cpp  sequenced_task_runner.cpp  single_thread_task_runner.cpp  single_thread_task_runner.h  task_environment.cpp  task_runner.cpp  task_tracer.cpp  thread.cpp  thread_pool.cpp  time_source.cpp
tests/: CMakeLists.txt  base64_test.cpp  cancelable_callback_test.cpp  check_macro_test.cpp  chinese_search_key_test.cpp  cjk_width_test.cpp  command_line_test.cpp  core_test.cpp  file_handle_test.cpp  flake_id_test.cpp  io_buffer_test.cpp  io_operation_test.cpp  log_bench.cpp  log_bench_compare.cpp  log_test.cpp  log_test2.c  mixed_load_test.cpp  platform_thread_test.cpp  process_test.cpp  scoped_blocking_call_shutdown_test.cpp  scoped_blocking_call_test.cpp  sequence_local_storage_slot_test.cpp  split_string_test.cpp  string_number_conversions_test.cpp  string_util_test.cpp  task_callback_test.cpp  task_environment_test.cpp  task_location_delay_demo.cpp  task_may_block_demo.cpp  task_priority_demo.cpp  task_scheduler_test.cpp  task_shutdown_demo.cpp  task_stress_test.cpp  task_thread_demo.cpp  task_thread_single_runner_bench_demo.cpp  task_threadpool_bench_demo.cpp  task_weak_ptr_demo.cpp  task_weak_ptr_test.cpp  text_normalization_test.cpp  thread_restrictions_test.cpp  (+3 more)
(+65 files in other folders)
